# Cyclometric-Complexity

./: Cyclometric-complexity.cabal  README.md  Web_Changed.py  master.py  stack.yaml  worker.py
app/: Main.hs
baseDockerImage/: Dockerfile  pushDockerHub.sh
test/: scalability.txt
